--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:w7J+t6/Dx0TLuD6wNelKYUvWvbvfLaW5OkJF1Rg9vUk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=138.68.86.71
 DB_PORT=3306
-DB_DATABASE=immobilienbewertung
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=admin_oskar
+DB_USERNAME=oskar
+DB_PASSWORD=p2Pt?6f91
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=w019af89.kasserver.com
+MAIL_PORT=587
+MAIL_USERNAME=m06663c7
+MAIL_PASSWORD=FBadgRQymD5v4QFn
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="email@baucampus.de"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
